[package]
name = "tle"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
anyhow = "1.0.56"
eyre = "0.6.8"
clap = "4.0.29"
tracing = {version = "0.1" }
cli-batteries = "0.4.1"
futures = { version = "0.3.2" }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
async-std = { version = "1.10.0", features = ["tokio1"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1"
humantime = "2.1.0"

tlock = {path = "../tlock"}

[build-dependencies]
cli-batteries = "0.4.1"
