[package]
name = "tlock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
url = "2.3.1"
hex = { version = "0.4", features = ["serde"] }
surf = "2.3.2"
sha2 = "0.9"
rand = "0.8.5"
group = "0.12"
async-std = { version = "1.10.0" }
bls12_381_plus = { version = "0.7.0", features = ["nightly"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
unsigned-varint = { version = "0.7", features = [
    "futures",
    "asynchronous_codec",
] }
